--- a/Farmera/package.json
+++ b/Farmera/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
     "prop-types": "^15.8.1",
     "props-validator": "^0.1.0",
