--- a/Farmera/package.json
+++ b/Farmera/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.22.7",
     "axios": "^1.7.9",
     "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
