--- a/Farmera/package.json
+++ b/Farmera/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "antd": "^5.22.7",
     "axios": "^1.7.9",
+    "debounce": "^2.2.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
     "prop-types": "^15.8.1",
