--- a/Farmera/package.json
+++ b/Farmera/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.22.7",
     "axios": "^1.7.9",
     "debounce": "^2.2.0",
+    "flutterwave-react-v3": "^1.3.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
     "prop-types": "^15.8.1",
@@ -20,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-paystack": "^6.0.0",
     "react-router-dom": "^7.0.1",
     "react-switch": "^7.0.0",
     "styled-components": "^6.1.13"
