--- a/Farmera/package.json
+++ b/Farmera/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "debounce": "^2.2.0",
     "flutterwave-react-v3": "^1.3.2",
+    "joi": "^17.13.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
     "prop-types": "^15.8.1",
