--- a/Farmera/package.json
+++ b/Farmera/package.json
@@ -17,6 +17,7 @@
     "joi": "^17.13.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
+    "package-lock.json": "^1.0.0",
     "prop-types": "^15.8.1",
     "props-validator": "^0.1.0",
     "react": "^18.3.1",
@@ -37,6 +38,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
-    "vite": "^6.0.1"
+    "rollup": "^4.31.0",
+    "vite": "^6.0.10"
   }
 }
